--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -1,5 +1,5 @@
 ---
-title: Startup Framework
+title: 考官面对面
 subtitle: Website Design
 layout: default
 modal-id: 5
@@ -10,6 +10,6 @@ alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description:老师均来自武汉各大名校，学习期间，学校开展名校考官咨询见面会，便于了解历年考试情况及艺术类高考考学动态。
 
 ---
