--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -1,11 +1,12 @@
 ---
+
 title: 考官面对面
 subtitle: Website Design
 layout: default
 modal-id: 5
 date: 2014-07-14
 img: startup-framework.png
-thumbnail: treehouse-thumbnail.png
+thumbnail: startup-framework-thumbnail.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
