--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -1,15 +1,15 @@
 ---
 title: 专业课程
-subtitle: Graphic Design
+subtitle: Website Design
 layout: default
-modal-id: 6
+modal-id: 4
 date: 2014-07-15
-img: roundicons.png
-thumbnail: roundicons-thumbnail.png
+img: treehouse.png
+thumbnail: treehouse-thumbnail.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
-description:实行全日制教学，小班授课，大量真题、模拟考场实训，让学员在真正的考场从容不迫、如鱼得水。除专业课外，班主任全天、全过程辅导，及时解决遗留问题。因材施教和机动教学，极大的提高了艺术高考的通过率。同时还开设整个高三阶段的文化课课程，专业课和文化课相结合，不会顾此失彼。
+description: 实行全日制教学，小班授课，大量真题、模拟考场实训，让学员在真正的考场从容不迫、如鱼得水。除专业课外，班主任全天、全过程辅导，及时解决遗留问题。因材施教和机动教学，极大的提高了艺术高考的通过率。同时还开设整个高三阶段的文化课课程，专业课和文化课相结合，不会顾此失彼。
 
 ---
